# audiogram

./: .gitignore  README.md  conda_environment.yml  dataset.dvc  model.dvc  pyproject.toml  requirements_experiment.txt
.dvc/: config
dataset/: df_audio_corr.csv
notebook/: audiogram_analysis.ipynb  audiogram_training.ipynb
scripts/: conda_env.sh  install.sh
src/: main.py  predict.py
src/model/: models.pkl
