[tool.poetry]
name = "audiogram"
version = "0.1.0"
description = "Predict Audiogram"
authors = ["Leonardo Lara <leoitcode>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.11.1"
joblib = "^1.1.0"
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.9.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
